[feat] - created UserAddMappgingImpl for work in HQL